# OpenGL

Lab1/: CMakeLists.txt
Lab1/src/: main.cpp
Lab1/src/MyMath/: vec3.cpp
Lab1/src/shaders/: circular.frag  shader.vert  wavy.frag
Lab2/: CMakeLists.txt
Lab2/include/MyMath/: mat4.h  vec3.h  vec4.h
Lab2/src/: main.cpp
Lab2/src/shaders/: shader.frag  shader.vert
Lab3/src/: main.cpp
Lab3/src/MyMath/: mat4.cpp
Lab3/src/shaders/: shader.frag  shader.vert
Lab4/: CMakeLists.txt
Lab4/include/: Camera.h  Curve.h  PointSet.h  RevolutionSurface.h  Shader.h
Lab4/include/MyMath/: MyMath.h  mat4.h
Lab4/shaders/: curve.frag  point.frag  point.vert  surface.frag  surface.vert
Lab4/src/: Camera.cpp  Curve.cpp  PointSet.cpp  RevolutionSurface.cpp  Shader.cpp  main.cpp
Lab4/src/MyMath/: mat4.cpp  vec3.cpp
